force-app/main/default/objects/Template_Mapping__c/Template_Mapping__c.object-meta.xml
<CustomObject>
    <description>A rule that selects which Template_Version__c is used at generate time, based on the source record's record type and/or a configurable match field. Lowest Priority__c wins.</description>
    <label>Template Mapping</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>