force-app/main/default/objects/Template_Mapping__c/fields/Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Approved_At__c</fullName>
    <description>Timestamp when the parent Template_Version__c first transitioned to Status=Approved. Stamped by TemplateVersionApprovalHandler (invocable from the Approval Flow). Never overwritten once set.</description>
    <label>Approved At</label>
    <type>DateTime</type>
</CustomField>