force-app/main/default/objects/Template_Mapping__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Mappings</relationshipLabel>
    <relationshipName>Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>