force-app/main/default/objects/Template_Mapping__c/fields/Match_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Match_Field_Api_Name__c</fullName>
    <description>API name of a field on the source record (e.g., Revision_Number__c) to test against Match_Value__c using Match_Operator__c. Blank with operator = Default makes this the catch-all rule.</description>
    <label>Match Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>