force-app/main/default/objects/Template_Mapping__c/fields/Match_Operator__c.field-meta.xml
<CustomField>
    <fullName>Match_Operator__c</fullName>
    <description>How Match_Value__c is compared to the source record's Match_Field_Api_Name__c value. Default = always match (catch-all).</description>
    <label>Match Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>In</fullName>
                <label>In (comma-separated values)</label>
            </value>
            <value>
                <fullName>NotNull</fullName>
                <label>Is Not Null</label>
            </value>
            <value>
                <fullName>Default</fullName>
                <label>Default (always matches)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>