force-app/main/default/objects/Template_Mapping__c/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <description>Value to compare against. For operator In, comma-separated list. Ignored when operator is NotNull or Default.</description>
    <label>Match Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>