force-app/main/default/objects/Template_Mapping__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Lowest priority wins among matching rules. Convention: 10 = specific recordType+field, 50 = recordType only, 100 = field only, 999 = catch-all default.</description>
    <label>Priority</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>