force-app/main/default/objects/Template_Mapping__c/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <description>Source record's RecordType.DeveloperName must equal this value to match. Leave blank for "any record type".</description>
    <label>Record Type Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>