force-app/main/default/objects/Template_Mapping__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The version selected when this rule matches.</description>
    <label>Template Version</label>
    <referenceTo>Template_Version__c</referenceTo>
    <relationshipLabel>Selected By Mappings</relationshipLabel>
    <relationshipName>Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>