force-app/main/default/objects/Template_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Template__c</columns>
    <columns>Template_Version__c</columns>
    <columns>Record_Type_Developer_Name__c</columns>
    <columns>Match_Field_Api_Name__c</columns>
    <columns>Match_Operator__c</columns>
    <columns>Match_Value__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>